--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "estate-agent-app",
+  "name": "real-estate-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://malshichamalka2006.github.io/real-estate-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2",
+    "react-icons": "^4.10.0",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
